[package]
name = "sfml_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = { version="^0.16" }
log = { version="^0.4" }
env_logger = { version="^0.9" }
dotenv = { version="^0.15" }
gl = { version="^0.14" }
gl_loader = { version="^0.1"}
